==> nopnop2002/esp-idf-icm20948/components/ICM20948/ICM20948_WE.cpp <==
#include <math.h>
#include <cstring>
#include <string>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/i2c_master.h"
#include "esp_rom_sys.h"
#include "ICM20948_WE.h"
#define I2C_NUM I2C_NUM_0
#define I2C_TICKS_TO_WAIT 100 // Maximum ticks to wait before issuing a timeout.
#define delayMicroseconds(us) esp_rom_delay_us(us)
#define delay(ms) esp_rom_delay_us(ms*1000)
#define millis() xTaskGetTickCount()*portTICK_PERIOD_MS

void ICM20948_WE::switchBank(uint8_t newBank){
    if(newBank != currentBank){
        currentBank = newBank;

		uint8_t out_buf[2];
		out_buf[0] = ICM20948_REG_BANK_SEL;
		out_buf[1] = currentBank<<4;
		ESP_ERROR_CHECK(i2c_master_transmit(dev_handle, out_buf, 2, I2C_TICKS_TO_WAIT));
    }
}

void ICM20948_WE::writeRegister8(uint8_t bank, uint8_t reg, uint8_t val){
    switchBank(bank);
        
	uint8_t out_buf[2];
	out_buf[0] = reg;
	out_buf[1] = val;
	ESP_ERROR_CHECK(i2c_master_transmit(dev_handle, out_buf, 2, I2C_TICKS_TO_WAIT));
    delayMicroseconds(5);
}

void ICM20948_WE::writeRegister16(uint8_t bank, uint8_t reg, int16_t val){
    switchBank(bank);
    int8_t MSByte = static_cast<int8_t>((val>>8) & 0xFF);
    uint8_t LSByte = val & 0xFF;
        
	uint8_t out_buf[3];
	out_buf[0] = reg;
	out_buf[1] = MSByte;
	out_buf[2] = LSByte;
	ESP_ERROR_CHECK(i2c_master_transmit(dev_handle, out_buf, 3, I2C_TICKS_TO_WAIT));
	delayMicroseconds(5);
}

uint8_t ICM20948_WE::readRegister8(uint8_t bank, uint8_t reg){
    switchBank(bank);
    uint8_t regValue = 0;

	uint8_t out_buf[1];
	uint8_t in_buf[1];
	out_buf[0] = reg;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, in_buf, 1, I2C_TICKS_TO_WAIT));
	regValue = in_buf[0];

    return regValue;
}

int16_t ICM20948_WE::readRegister16(uint8_t bank, uint8_t reg){
    switchBank(bank);
    uint8_t MSByte = 0, LSByte = 0;
    int16_t reg16Val = 0;
    
	uint8_t out_buf[1];
	uint8_t in_buf[2];
	out_buf[0] = reg;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, in_buf, 2, I2C_TICKS_TO_WAIT));
	MSByte = in_buf[0];
	LSByte = in_buf[1];

    reg16Val = (MSByte<<8) + LSByte;
    return reg16Val;
}

void ICM20948_WE::readAllData(uint8_t* data){    
    switchBank(0);
    
	uint8_t out_buf[1];
	out_buf[0] = ICM20948_ACCEL_OUT;
	ESP_ERROR_CHECK(i2c_master_transmit_receive(dev_handle, out_buf, 1, data, 20, I2C_TICKS_TO_WAIT));
}
