==> KaiStaud/BallAndBeam/Core/Src/ICM20948_WE.cpp <==
#include "ICM20948_WE.h"
#include "math.h"

void ICM20948_WE::switchBank(uint8_t newBank) {
	if (newBank != currentBank) {
		currentBank = newBank;

		std::uint8_t pData[2] = { ICM20948_REG_BANK_SEL, currentBank << 4 };
		HAL_I2C_Master_Transmit(_wire, i2cAddress, pData, 2, 10);
	}
}

uint8_t ICM20948_WE::writeRegister8(uint8_t bank, uint8_t reg, uint8_t val) {
	switchBank(bank);
	std::uint8_t pData[2] = { reg, val };
	return HAL_I2C_Master_Transmit(_wire, i2cAddress, pData, 2, 10);
}

uint8_t ICM20948_WE::writeRegister16(uint8_t bank, uint8_t reg, int16_t val) {
	switchBank(bank);
	int8_t MSByte = (int8_t) ((val >> 8) & 0xFF);
	uint8_t LSByte = val & 0xFF;
	std::uint8_t pData[3] = { reg, MSByte, LSByte };
	return HAL_I2C_Master_Transmit(_wire, i2cAddress, pData, 3, 10);
}

uint8_t ICM20948_WE::readRegister8(uint8_t bank, uint8_t reg) {
	switchBank(bank);
	uint8_t regValue = 0;
	HAL_I2C_Master_Transmit(_wire, i2cAddress, &reg, 2, 10);
	HAL_I2C_Master_Receive(_wire, i2cAddress, &regValue, 1, 10);
	return regValue;
}

int16_t ICM20948_WE::readRegister16(uint8_t bank, uint8_t reg) {
	switchBank(bank);
	uint8_t MSByte = 0, LSByte = 0;
	int16_t reg16Val[2] = { 0, 0 };

	HAL_I2C_Master_Transmit(_wire, i2cAddress, &reg, 2, 10);
	HAL_I2C_Master_Receive(_wire, i2cAddress, &regVal, 2, 10);
	MSByte = reg16Val[1];
	MSByte = reg16Val[0];
	return (MSByte << 8) + LSByte;
}

void ICM20948_WE::readAllData(uint8_t *data) {
	switchBank(0);
	uint8_t x_acc_h = 0x2D;
	HAL_I2C_Master_Transmit(_wire, i2cAddress, &x_acc_h, 1, 10);
//    HAL_I2C_Master_Transmit(_wire, i2cAddress, ICM20948_ACCEL_OUT, 1, 10);
	HAL_I2C_Master_Receive(_wire, i2cAddress, data, 20, 10);
}
